compiler/lume_parser/src/snapshots/lume_parser__tests__generic_struct_snapshots@single_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<T> {}\")"
---
SOURCE_FILE@0..17
  STRUCT@0..17
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..11
      IDENT@7..11 "Test"
    BOUND_TYPES@11..14
      LESS@11..12 "<"
      BOUND_TYPE@12..13
        NAME@12..13
          IDENT@12..13 "T"
      GREATER@13..14 ">"
    WHITESPACE@14..15 " "
    LEFT_BRACE@15..16 "{"
    RIGHT_BRACE@16..17 "}"
