compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@inf_loop_continue.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"loop { continue; }\")"
---
SOURCE_FILE@0..18
  LOOP_STMT@0..18
    LOOP_KW@0..4 "loop"
    WHITESPACE@4..5 " "
    BLOCK@5..18
      LEFT_BRACE@5..6 "{"
      WHITESPACE@6..7 " "
      CONTINUE_STMT@7..16
        CONTINUE_KW@7..15 "continue"
        SEMICOLON@15..16 ";"
      WHITESPACE@16..17 " "
      RIGHT_BRACE@17..18 "}"
