compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@inf_loop_statement.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"loop { let a = 0; }\")"
---
SOURCE_FILE@0..19
  LOOP_STMT@0..19
    LOOP_KW@0..4 "loop"
    WHITESPACE@4..5 " "
    BLOCK@5..19
      LEFT_BRACE@5..6 "{"
      WHITESPACE@6..7 " "
      LET_STMT@7..17
        LET_KW@7..10 "let"
        WHITESPACE@10..11 " "
        NAME@11..12
          IDENT@11..12 "a"
        WHITESPACE@12..13 " "
        ASSIGN@13..14 "="
        WHITESPACE@14..15 " "
        LIT_EXPR@15..16
          INTEGER_LIT@15..16
            INTEGER_LIT@15..16 "0"
        SEMICOLON@16..17 ";"
      WHITESPACE@17..18 " "
      RIGHT_BRACE@18..19 "}"
