compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@iter_expr.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"for pattern in [1, 2, 3] { }\")"
---
SOURCE_FILE@0..28
  FOR_STMT@0..28
    FOR_KW@0..3 "for"
    WHITESPACE@3..4 " "
    NAME@4..11
      IDENT@4..11 "pattern"
    WHITESPACE@11..12 " "
    IN_KW@12..14 "in"
    WHITESPACE@14..15 " "
    ARRAY_EXPR@15..24
      LEFT_BRACKET@15..16 "["
      LIT_EXPR@16..17
        INTEGER_LIT@16..17
          INTEGER_LIT@16..17 "1"
      COMMA@17..18 ","
      WHITESPACE@18..19 " "
      LIT_EXPR@19..20
        INTEGER_LIT@19..20
          INTEGER_LIT@19..20 "2"
      COMMA@20..21 ","
      WHITESPACE@21..22 " "
      LIT_EXPR@22..23
        INTEGER_LIT@22..23
          INTEGER_LIT@22..23 "3"
      RIGHT_BRACKET@23..24 "]"
    WHITESPACE@24..25 " "
    BLOCK@25..28
      LEFT_BRACE@25..26 "{"
      WHITESPACE@26..27 " "
      RIGHT_BRACE@27..28 "}"
