compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@iter_loop_statement.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"for pattern in collection { let a = 0; }\")"
---
SOURCE_FILE@0..40
  FOR_STMT@0..40
    FOR_KW@0..3 "for"
    WHITESPACE@3..4 " "
    NAME@4..11
      IDENT@4..11 "pattern"
    WHITESPACE@11..12 " "
    IN_KW@12..14 "in"
    WHITESPACE@14..15 " "
    VARIABLE_EXPR@15..25
      NAME@15..25
        IDENT@15..25 "collection"
    WHITESPACE@25..26 " "
    BLOCK@26..40
      LEFT_BRACE@26..27 "{"
      WHITESPACE@27..28 " "
      LET_STMT@28..38
        LET_KW@28..31 "let"
        WHITESPACE@31..32 " "
        NAME@32..33
          IDENT@32..33 "a"
        WHITESPACE@33..34 " "
        ASSIGN@34..35 "="
        WHITESPACE@35..36 " "
        LIT_EXPR@36..37
          INTEGER_LIT@36..37
            INTEGER_LIT@36..37 "0"
        SEMICOLON@37..38 ";"
      WHITESPACE@38..39 " "
      RIGHT_BRACE@39..40 "}"
