compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@pred_loop_continue.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"while true { continue; }\")"
---
SOURCE_FILE@0..24
  WHILE_STMT@0..24
    WHILE_KW@0..5 "while"
    WHITESPACE@5..6 " "
    LIT_EXPR@6..10
      BOOLEAN_LIT@6..10
        BOOLEAN_LIT@6..10 "true"
    WHITESPACE@10..11 " "
    BLOCK@11..24
      LEFT_BRACE@11..12 "{"
      WHITESPACE@12..13 " "
      CONTINUE_STMT@13..22
        CONTINUE_KW@13..21 "continue"
        SEMICOLON@21..22 ";"
      WHITESPACE@22..23 " "
      RIGHT_BRACE@23..24 "}"
